# AIPHA

./: .env.example  .gitignore  LICENSE  README.md  app.py  audit_pipeline.py  config.py  metrics.json  pyproject.toml  requirements.txt  test_phase7.py  test_phase71.py  test_phase72.py  test_rag.py  workflow.mmd
agents/: __init__.py  document_agent.py  drug_agent.py  formatter_agent.py  general_health_agent.py  mental_health_agent.py  nutrition_agent.py  supervisor_agent.py
data/medical_docs/: README.md
database/: __init__.py  connection.py  document_service.py  gridfs_manager.py  metadata.py  migrate.py  migrate_local.py  reset_index_status.py  sync_atlas.py  uploader.py
graph/: builder.py  cache.py  edges.py  logger.py  metrics.py  monitor.py  nodes.py  router.py  state.py  visualizer.py  workflow.py
memory/: __init__.py  memory_manager.py  session.py
prompts/: __init__.py  system_prompt.py  templates.py
rag/: __init__.py  embeddings.py  indexer.py  loader.py  pipeline.py  reset_vectorstore.py  retriever.py  splitter.py  utils.py  vectorstore.py
tests/: test_final_validation.py
tools/: __init__.py  calculator_tool.py  document_analysis_tool.py  knowledge_retrieval_tool.py  retrieval_tool.py  system_status_tool.py  tool_result.py
utils/: __init__.py  benchmark.py  evaluation_metrics.py
