[project]
name = "healthassistant"
version = "0.5.0"
description = "AI-Powered Health Assistant - Phase 5: MongoDB + GridFS + Incremental RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.20",
    "langchain-chroma>=0.2.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "chromadb>=0.4.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "pymongo>=4.6.0",
    "langgraph>=1.2.5",
]
